--- a/config/config.yaml
+++ b/config/config.yaml
@@ -23,6 +23,10 @@ STANLEY:
   K_GAIN: 0.06
   LOOK_AHREAD_DISTANCE: 0.2
 
+STOP:
+  SAMPLE_SIZE: 25
+  PROBABILITY: 0.9
+
 MOVING_AVERAGE_FILTER:
   SAMPLE_SIZE: 30
 
@@ -38,8 +42,10 @@ CANNY:
 HOUGH:
   ABS_SLOPE_RANGE: 10.0
   THRESHOLD: 15
-  MIN_LINE_LENGTH: 20
+  MIN_LINE_LENGTH: 15
   MAX_LINE_GAP: 10
   CONTINUS_THRESHOLD: 60
+  CLUSTER_DISTANCE: 40
+  CLUSTER_RADIAN: 0.174533
 
 DEBUG: false
