--- a/config/config.yaml
+++ b/config/config.yaml
@@ -39,6 +39,11 @@ CANNY:
   LOW_THRESHOLD: 150
   HIGH_THRESHOLD: 250
 
+DETECTION:
+  CLASSES: ['LEFT','RIGHT','STOP','CROSSWLAK','UTURN','TRAFFIC_LIGHT','XYCAR','IGNORE']
+  CONF_THRESHOLD: 0.7
+
+
 HOUGH:
   ABS_SLOPE_RANGE: 10.0
   THRESHOLD: 15
