Lidar 회피주행 추가

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -40,8 +40,31 @@ CANNY:
   HIGH_THRESHOLD: 250
 
 DETECTION:
-  CLASSES: ['LEFT','RIGHT','STOP','CROSSWLAK','UTURN','TRAFFIC_LIGHT','XYCAR','IGNORE']
+  CLASSES:
+    [
+      "LEFT",
+      "RIGHT",
+      "STOP",
+      "CROSSWLAK",
+      "UTURN",
+      "TRAFFIC_LIGHT",
+      "XYCAR",
+      "IGNORE",
+    ]
   CONF_THRESHOLD: 0.7
+
+LIDAR:
+  RANGE_RADIAN_THRESHOLD: 1.0681
+  RANGE_DISTANCE_THRESHOLD: 0.4
+  CLUSTER_DISTANCE_THRESHOLD: 0.04
+  CLUSTER_MIN_POINT: 3
+  CLUSTER_MAX_POINT: 50
+  TRACKING_DISTANCE_THRESHOLD: 0.15
+
+
+AVOIDANCE_INPUT:
+  POSITION: 0.05
+  SLOPE: 0.0001
 
 
 HOUGH:
