--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 IMAGE:
   WIDTH: 640
   HEIGHT: 480
-  ROI_START_HEIGHT: 400
+  ROI_START_HEIGHT: 420
   ROI_HEIGHT: 50
 
 XYCAR:
@@ -9,6 +9,7 @@ XYCAR:
   MAX_SPEED: 5.0
   MIN_SPEED: 5.0
   SPEED_CONTROL_THRESHOLD: 15.0
+  ROTATE_THRESHOLD: 10
   ACCELERATION_STEP: 0.05
   DECELERATION_STEP: 0.1
   LINEAR_UNIT: 10
@@ -20,7 +21,7 @@ PID:
   D_GAIN: 0.08
 
 STANLEY:
-  K_GAIN: 0.06
+  K_GAIN: 0.5
   LOOK_AHREAD_DISTANCE: 0.2
 
 STOP:
@@ -55,24 +56,28 @@ DETECTION:
 
 LIDAR:
   RANGE_RADIAN_THRESHOLD: 1.0681
-  RANGE_DISTANCE_THRESHOLD: 0.4
+  RANGE_DISTANCE_THRESHOLD: 0.35
   CLUSTER_DISTANCE_THRESHOLD: 0.04
   CLUSTER_MIN_POINT: 3
   CLUSTER_MAX_POINT: 50
   TRACKING_DISTANCE_THRESHOLD: 0.15
+  TRACKING_MISS_SECOND: 1
 
 
 AVOIDANCE_INPUT:
   POSITION: 0.05
   SLOPE: 0.0001
 
+ROTATE_INPUT:
+  POSITION: 1
+  SLOPE: 0.0001
 
 HOUGH:
   ABS_SLOPE_RANGE: 10.0
   THRESHOLD: 15
   MIN_LINE_LENGTH: 15
   MAX_LINE_GAP: 10
-  CONTINUS_THRESHOLD: 60
+  CONTINUS_THRESHOLD: 200
   CLUSTER_DISTANCE: 40
   CLUSTER_RADIAN: 0.174533
 
