표지판감지 로직 추가

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -21,7 +21,7 @@ PID:
   D_GAIN: 0.08
 
 STANLEY:
-  K_GAIN: 0.5
+  K_GAIN: 0.035
   LOOK_AHREAD_DISTANCE: 0.2
 
 STOP:
@@ -53,6 +53,7 @@ DETECTION:
       "IGNORE",
     ]
   CONF_THRESHOLD: 0.7
+  SIGN_LIFESECOND: 7
 
 LIDAR:
   RANGE_RADIAN_THRESHOLD: 1.0681
@@ -69,7 +70,11 @@ AVOIDANCE_INPUT:
   SLOPE: 0.0001
 
 ROTATE_INPUT:
-  POSITION: 1
+  POSITION: 0.05
+  SLOPE: 0.0001
+
+SIGN_INPUT:
+  POSITION: 5
   SLOPE: 0.0001
 
 HOUGH:
