표지판 검출 주행 수정중

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 IMAGE:
   WIDTH: 640
   HEIGHT: 480
-  ROI_START_HEIGHT: 420
+  ROI_START_HEIGHT: 350
   ROI_HEIGHT: 50
 
 XYCAR:
@@ -21,7 +21,7 @@ PID:
   D_GAIN: 0.08
 
 STANLEY:
-  K_GAIN: 0.035
+  K_GAIN: 0.032
   LOOK_AHREAD_DISTANCE: 0.2
 
 STOP:
@@ -53,7 +53,8 @@ DETECTION:
       "IGNORE",
     ]
   CONF_THRESHOLD: 0.7
-  SIGN_LIFESECOND: 7
+  SIGN_LIFESECOND: 0.5
+  MIN_BOUNDINGBOX_AREA: 2000
 
 LIDAR:
   RANGE_RADIAN_THRESHOLD: 1.0681
@@ -70,11 +71,11 @@ AVOIDANCE_INPUT:
   SLOPE: 0.0001
 
 ROTATE_INPUT:
-  POSITION: 0.05
+  POSITION: 0.125
   SLOPE: 0.0001
 
 SIGN_INPUT:
-  POSITION: 5
+  POSITION: 10
   SLOPE: 0.0001
 
 HOUGH:
@@ -86,4 +87,4 @@ HOUGH:
   CLUSTER_DISTANCE: 40
   CLUSTER_RADIAN: 0.174533
 
-DEBUG: false
+DEBUG: true
